--- a/DataManage/MainWindow.xaml
+++ b/DataManage/MainWindow.xaml
@@ -24,7 +24,7 @@
 
                     <!--搜索栏-->
                     <Grid Grid.Row="0" Grid.Column="1" >
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="left" Height="30" Margin="20,20,20,20">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="20,20,20,20">
                             <Label Content="请输入名称:" Name="input" Margin="0,0,20,0"></Label>
                             <TextBox Text="" Name="text" Width="450" ></TextBox>
                             <Button Content="查询" Width="60" Margin="20,0,20,0" Click="BtnSelect"/>
