--- a/DataManage/MainWindow.xaml
+++ b/DataManage/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DataManage"
         mc:Ignorable="d"
-        Title="数据管理平台" Height="623" Width="1125" Loaded="Window_Loaded" 
-        WindowStartupLocation="CenterScreen">
+        Title="数据管理平台" Height="623" Width="500" Loaded="Window_Loaded" 
+        WindowStartupLocation="CenterScreen" >
+    <!--WindowState="Maximized" -->
     <Grid>
         <TabControl TabStripPlacement="Left">
 
@@ -24,7 +25,7 @@
 
                     <!--搜索栏-->
                     <Grid Grid.Row="0" Grid.Column="1" >
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="left" Height="30" Margin="20,20,20,20">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="30" Margin="20,20,20,20">
                             <Label Content="请输入名称:" Name="input" Margin="0,0,20,0"></Label>
                             <TextBox Text="" Name="text" Width="450" ></TextBox>
                             <Button Content="查询" Width="60" Margin="20,0,20,0" Click="BtnSelect"/>
@@ -55,7 +56,13 @@
                         </DataGrid.RowStyle>
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding Id}" Header="编号"  Width="50"/>
+                            <DataGridTextColumn Binding="{Binding Id}" Header="编号"  Width="50">
+                                <DataGridTextColumn.HeaderTemplate>
+                                    <DataTemplate>
+                                        <Label Content="{Binding Id}" HorizontalContentAlignment="Center"></Label>
+                                    </DataTemplate>
+                                </DataGridTextColumn.HeaderTemplate>
+                            </DataGridTextColumn>
                             <DataGridTextColumn Binding="{Binding UserName}" Header="姓名" Width="150"/>
                             <DataGridTextColumn Binding="{Binding Rank}" Header="等级" Width="150"/>
                             <DataGridTextColumn Binding="{Binding Content}" Header="微博内容"  Width="100"/>
