--- a/DataManage/MainWindow.xaml
+++ b/DataManage/MainWindow.xaml
@@ -51,7 +51,7 @@
                             <!--显示栏-->
                             <DataGrid Name="dg1" AlternationCount="2" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" 
                               Margin="20,10,20,20" HorizontalAlignment="Center"
-                              Grid.Row="1" Grid.Column="1" IsReadOnly="True">
+                              Grid.Row="1" Grid.Column="1" IsReadOnly="True" SelectionUnit="FullRow">
 
                                 <DataGrid.RowStyle>
                                     <Style TargetType="DataGridRow">
@@ -63,6 +63,7 @@
                                                 <Setter Property="Background" Value="White"/>
                                             </Trigger>
                                         </Style.Triggers>
+                                        <EventSetter Event="MouseDown" Handler="Item_GotFocus"/>
                                     </Style>
                                 </DataGrid.RowStyle>
 
@@ -78,6 +79,29 @@
                                 </DataGrid.ColumnHeaderStyle>
                                 
                                 <DataGrid.Columns>
+                                    <DataGridCheckBoxColumn>
+                                        <DataGridCheckBoxColumn.HeaderTemplate >
+                                            <DataTemplate>
+                                                <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Tag="{Binding Id}" Click="CheckBox_Click"></CheckBox>
+                                            </DataTemplate>
+                                        </DataGridCheckBoxColumn.HeaderTemplate>
+
+                                        <!--为该列的CheckBox Tag属性绑定值-->
+                                        <DataGridCheckBoxColumn.ElementStyle>
+                                            <Style TargetType="CheckBox">
+                                                <Setter Property="Tag" Value="{Binding Id}"></Setter>
+                                            </Style>
+                                        </DataGridCheckBoxColumn.ElementStyle>
+
+                                        <!--设置一点样式-->
+                                        <DataGridCheckBoxColumn.CellStyle >
+                                            <Style  >
+                                                <Setter Property="CheckBox.VerticalAlignment"  Value="Center"></Setter>
+                                                <Setter Property="CheckBox.HorizontalAlignment"  Value="Center"></Setter>
+                                            </Style>
+                                        </DataGridCheckBoxColumn.CellStyle>
+
+                                    </DataGridCheckBoxColumn>
                                     <DataGridTextColumn  Header="编号" Binding="{Binding Id}" Width="50" >
                                         <!-- ElementStyle="{StaticResource ResourceKey=dgCell}" 在每一个DataGridTextColumn后面加上这个，使得表格的每一行都居中-->
                                         <!-- 
